--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -122,6 +122,25 @@
   text-align: center;
 }
 
+.pagination{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+}
+.pagination button{
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem 0;
+  font-size: 0.625rem;
+  color: white;
+  background-color: #6c79db;
+  border: none;
+  border-radius: 1rem;
+
+}
+
 .pokemon .detail img {
   max-width: 100%;
   height: 70px;
